--- a/NumericalCalculatorPwa/wwwroot/index.html
+++ b/NumericalCalculatorPwa/wwwroot/index.html
@@ -6,7 +6,7 @@
     <title>Numerical Calculator</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="css/bundle.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 </head>
@@ -57,9 +57,6 @@
 
     <footer id="pageFooter" class="PageFooter">
         <p>© 2012 - 2020 <a href="https://pawelrychlicki.pl/home/contact">Paweł Rychlicki</a></p>
-        <p>
-            <a href="#">Back to top</a>
-        </p>
     </footer>
 
     <script src="_framework/blazor.webassembly.js"></script>
