--- a/NumericalCalculatorPwa/wwwroot/index.html
+++ b/NumericalCalculatorPwa/wwwroot/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <footer id="pageFooter" class="PageFooter">
-        <p>© 2012 - 2020 <a href="https://pawelrychlicki.pl/home/contact">Paweł Rychlicki</a></p>
+        <span>© 2012 - 2020</span><a class="ml-2" href="https://pawelrychlicki.pl/home/contact">Paweł Rychlicki</a>
     </footer>
 
     <script src="_framework/blazor.webassembly.js"></script>
