--- a/NumericalCalculatorPwa/wwwroot/index.html
+++ b/NumericalCalculatorPwa/wwwroot/index.html
@@ -61,6 +61,7 @@
 
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <!--<script src="scripts/bundle.js"></script>-->
     <script>
         var isStandalone = window.matchMedia('(display-mode: standalone)').matches;
 
