--- a/NumericalCalculatorPwa/wwwroot/index.html
+++ b/NumericalCalculatorPwa/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Numerical Calculator</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/bundle.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
