--- a/NumericalCalculatorPwa/wwwroot/index.html
+++ b/NumericalCalculatorPwa/wwwroot/index.html
@@ -6,7 +6,10 @@
     <title>Numerical Calculator</title>
     <base href="/" />
     <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/bundle.css" rel="stylesheet" />
+    <link href="css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
+    <link href="css/fonts/fonts.css" rel="stylesheet" />
+    <link href="css/site.css" rel="stylesheet" />
+    <link href="NumericalCalculatorPwa.styles.css" rel="stylesheet">
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
 </head>
