--- a/NumericalCalculatorPwa/wwwroot/index.html
+++ b/NumericalCalculatorPwa/wwwroot/index.html
@@ -44,6 +44,8 @@
                         </li>
                     </ul>
                 </div>
+
+                <button id="installButton" class="btn btn-primary" style="display:none;">Install this app on your computer</button>
             </div>
         </nav>
     </header>
@@ -63,8 +65,9 @@
     </footer>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="site.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <!--<script src="scripts/bundle.js"></script>-->
+
     <script>
         var isStandalone = window.matchMedia('(display-mode: standalone)').matches;
 
